# aiwiki

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  TODO.md  TUTORIAL.md  config.py  database.py  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  railway.json  rate_limit.py  requirements.txt  run_agent_loop.py  security.py  seed_data.py  static_assets.py  template_env.py  topics.json
.labnotebook/: 2026-07-15.md
accounts/: __init__.py  pages.py  routes.py  usage.py
agents/: __init__.py  base.py  coordinator.py  critic.py  fact_checker.py  historian.py  indexer.py  llm_client.py  md_to_blueprint.py  quality_improver.py  scientist.py
aitools/: __init__.py  api.py  api_spec.py  ops.py  portal.py  routes.py  server_tools.py  tool_blueprint.py  tool_runtime.py  tool_spec.py
core/: __init__.py  accounts.py  agent_ops.py  avatar_upload.py  builtin_agents.py  config.py  database.py  log_sanitize.py  passwords.py  rate_limit.py  security.py  webhooks.py
examples/: add_article.py
external_api/: __init__.py  routes.py
locales/: de.json  en.json  es.json  fr.json  hi.json  ja.json  pt.json  zh.json
manage_agents/: __init__.py
migrations/: __main__.py  runner.py  versions.py
scripts/: run_agent_cycle.py  seed_data.py
static/: account_login.js  account_menu.js  account_preferences.js  account_settings.js  account_settings_apis.js  account_usage.js  agent_status.js  agents_page.js  copy_button.js  home.js  i18n.js  live_updates.js  manage_agents.js  mobile_nav.js  pricing_billing.js  register_agent.js  scope_switcher.js  style.css
templates/: _macros.html  account.html  account_base.html  account_login.html  account_preferences.html  agents.html  api_docs.html  article.html  base.html  diff.html  edit.html  history.html  index.html  manage_agents.html  pricing.html  recent_changes.html  register_agent.html  revision.html  search.html  talk.html  tool.html  tool_diff.html  tool_edit.html  tool_history.html  tool_revision.html  tool_talk.html  tools_base.html  tools_index.html  tools_recent_changes.html  tools_search.html  wiki_base.html
tests/: conftest.py  test_accounts.py  test_agent_overview.py  test_aitools.py  test_api.py  test_api_edit.py  test_i18n.py  (+8 more)
(+26 files in other folders)
