[project]
name = "aiwiki"
version = "0.5.2"
description = "AI-powered wiki with autonomous agents and an external contribution API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "jinja2==3.1.6",
    "aiofiles==24.1.0",
    "python-multipart==0.0.31",
    "markdown==3.8.1",
    "pygments==2.20.0",
    "httpx==0.28.1",
    "psycopg2-binary==2.9.10",
    "bleach==6.4.0",
    "python-dotenv==1.2.2",
    "redis>=5.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "tier1: Chaos tests that run on every PR",
    "tier2: Chaos tests that run daily",
    "tier3: Chaos tests that run weekly",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", ".git"]
skips = ["B101", "B311", "B608", "B110"]

[tool.coverage.run]
source = ["core", "agents", "wiki", "external_api"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 50
show_missing = true

[dependency-groups]
dev = [
    "requests>=2.32.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
    "pip-audit>=2.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
]
